--- a/TurkishDrama-List.html
+++ b/TurkishDrama-List.html
@@ -295,9 +295,13 @@
   <script>
         // Drama data
         const dramas = [
-            {
+                 {
+                title: "PyaarLafzoMeKahan",
+                image: "https://m.media-amazon.com/images/I/81BbsP13mOL.png",
+                url: "https://muzammilshah51214.github.io/Turkish-Dramas/PyaarLafzoMeKahan.html"
+            },
                 
-                
+                {
                 title: "Ertugrul-Gazi",
                 image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIB__IslZt1v80nqAMqUgAJ7E1TQarbNS0HCUNSKDzt5C1fD8dUn3kQa4&s=10",
                 url: "https://rawcdn.githack.com/MuzammilShah51214/Turkish-Dramas/241d4e8fd19cb9ff277a14311faeef56dbdd46c5/Ertugrul-Gazi-All-Seasion.html"
